--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,10 +2,17 @@
 .topImage {
   width: 100%;
   display: block;
-  height: 560rpx;
+  height: 460rpx;
 }
 
-.userinfo {
+.bottomImage {
+  margin-top: 20rpx;
+  width: 100%;
+  display: block;
+  height: 200rpx;
+}
+
+.contactZone {
   display: flex;
   flex-direction: column;
   align-items: center;
