--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,7 +6,7 @@
 }
 
 .bottomImage {
-  margin-top: 20rpx;
+  margin-top: 50rpx;
   width: 100%;
   display: block;
   height: 200rpx;
@@ -29,4 +29,4 @@
 .ws_ts{line-height: 36rpx;}
 .ws_ts text{font-size: 28rpx; color: #878787;}
 
-.ws_btn{width: 300rpx;margin: auto;margin-top: 20rpx;background:#ff2121;border-radius:10rpx;font-size:30rpx;color:#ffffff;text-align:center;height: 80rpx;line-height: 100rpx;}
+.ws_btn{width: 300rpx;margin: auto;margin-top: 20rpx;margin-bottom: 40rpx;background:#ff2121;border-radius:10rpx;font-size:30rpx;color:#ffffff;text-align:center;height: 80rpx;line-height: 100rpx;}
